<resources>
    <string name="app_name">TodoWhere</string>
    <string name="add_todo">일정 추가</string>
    <string name="done">완료</string>
    <string name="location">MAP</string>
    <string name="menu">MENU</string>
    <string name="time">시간 설정</string>
    <string name="map">현재 위치</string>
    <string name="add">등록</string>
    <string name="cancel">취소</string>

    <string-array name="caledar_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="caledar_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

</resources>
