<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/todoText"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/timer_button"
        app:layout_constraintEnd_toStartOf="@+id/map_button"
        app:layout_constraintRight_toLeftOf="@id/map_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="What_todo" />

    <Button
        android:id="@+id/timer_button"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/done"
        app:backgroundTint="@color/sky_200"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@id/map_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoText" />

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/sky_200"
        android:contentDescription="@string/location"
        android:tint="@color/sky_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/todoText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_my_location_24"
        tools:src="@drawable/ic_baseline_my_location_24"
        tools:srcCompat="@drawable/ic_baseline_my_location_24" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFAB91"
        android:contentDescription="@string/menu"
        android:tint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_delete_24" />
</androidx.constraintlayout.widget.ConstraintLayout>